# PGFAT

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_pgfat.py
example/data/: CIPK-PF03822.hmm  PK-PF00069.hmm
pgfat/: pgfat.py
